# witnessed-persistent-homology

./: .gitignore  README.md  WINDOWS_SETUP.txt  analyse_text.py  pyproject.toml  pytest.ini  requirements.txt
docs/: sample_single_slice_output.txt  sample_swl_output.txt
examples/: chapter4_single_slice.py  chapter4_synonym_test.py  chapter4_temporal_dynamics.py  legacy_analyse_text.py  legacy_chapter4_example.py  legacy_example.py
tests/: test_core.py
witnessed_ph/: README.md  __init__.py  analysis.py  config.py  embedding.py  filtration.py  h0.py  h1.py  io.py  pretty.py  requirements.txt  schema.py  temporal.py  tracking.py  utils.py  witnesses.py
witnessed_ph_temporal/: README.md  WINDOWS_SETUP.txt  __init__.py  journeys.py  matching.py  nerve.py  pipeline.py  requirements.txt  run_temporal.py  schema.py  similarity.py  theme_score.py  theme_score_output.txt
witnessed_ph_temporal/witnessed_ph/: __init__.py  diagnostics.py  embedding.py  pipeline.py  schema.py
