[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "witnessed-ph"
version = "0.1.0"
description = "Reproducible code for Chapter 4 witnessed persistence experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "you@example.com"},
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
  "protobuf>=3.20",
  "sentencepiece>=0.1.99",
  # spaCy currently requires pydantic<2 in many environments; pin for reproducibility
  "spacy>=3.7,<3.8",
  "pydantic<2",
  "gudhi>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["witnessed_ph*"]
